k8s/infrastructure/storage/velero/CiliumNetworkPolicy.jobs.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-velero-kubectl-jobs-egress
  namespace: velero
spec:
  endpointSelector: {matchLabels: {component: kubectl-job}}
  egress:
    - {toEntities: [kube-apiserver]}
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-velero-repo-maintenance-egress
  namespace: velero
spec:
  endpointSelector: {matchExpressions: [{key: velero.io/repo-name, operator: Exists}]}
  egress:
    - {toEntities: [kube-apiserver]}
    - {toFQDNs: [{matchName: hel1.your-objectstorage.com}], toPorts: [ports: [{port: '443', protocol: TCP}]]}
